# ensembleAI-lablab.ai-hackathon

./: .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  RUNBOOK.md  agent_config.yaml.example  app.py  demo_replay.py  hackathon_plan.md  pyproject.toml  reproduce.md  run_agents.py  start.sh
.github/workflows/: ensemble-ai.yml
ensemble_ai/: __init__.py  agents.py  crypto.py  cve_mapping.py  db.py  tools.py  workflow.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BottomTimeline.tsx  CenterLiveTerminal.tsx  LeftPanelTopology.tsx  RightPanelDiffViewer.tsx  TopCommandBar.tsx
mock_app/cloud_python/: invoice_service.py
mock_app/legacy_php/: plugin_vulnerable.php
mock_app/regulated_node/: patient_api.js
waf_rules/: test_rule.conf
